[package]
name = "depwave"
license = "MIT"
authors = ["Artemy Granat <artemygranat@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dot-parser = "0.6.1"
either = "1.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
